# leaf_rec

./: Procfile  db.sqlite3  pyproject.toml
api/: settings.py
data_pipeline/: models.py  serializers.py  urls.py  views.py
data_pipeline/data_processing/: data_pre.ipynb  run_prediction.py  train_model.py
logs/train/: events.out.tfevents.1680718623.vikums-mbp.31323.0.v2  events.out.tfevents.1680721076.vikums-mbp.32289.0.v2  events.out.tfevents.1680922069.vikums-mbp.33674.0.v2  events.out.tfevents.1680922119.vikums-mbp.33674.2.v2  events.out.tfevents.1680922149.vikums-mbp.33674.4.v2
logs/validation/: events.out.tfevents.1680718625.vikums-mbp.31323.1.v2  events.out.tfevents.1680721077.vikums-mbp.32289.1.v2  events.out.tfevents.1680922071.vikums-mbp.33674.1.v2  events.out.tfevents.1680922120.vikums-mbp.33674.3.v2  events.out.tfevents.1680922150.vikums-mbp.33674.5.v2
models/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/variables/: variables.index
static/: staticfiles.json
