[tool.poetry]
name = "leaf-recognition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
django = "^4.2"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.5"
tensorflow = "^2.12.0"
matplotlib = "^3.7.1"
gunicorn = "^20.1.0"
opencv-python-headless = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
